tests/parser/errors/load_empty_path.mochi
type Row { name: string }
let rows = load "" as Row
